--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ twitter_username: burgrfck
 github_username: fredbobathon
 markdown: kramdown
 google_analytics: UA-92970153-1
+disqus:
+    shortname: burgrfck
 theme: minima
 gems:
 - jekyll-feed
